# zll

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  PRETTY_PRINTER_GUIDELINE.md  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  conceptzll_1_1__nothrow__access.html  conceptzll_1_1__nothrow__access__compare.html  conceptzll_1_1__provides__ll__header.html  conceptzll_1_1__provides__sh__header.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacezll.html  namespacezll.js  navtreedata.js  navtreeindex0.js  (+42 more)
.github/: copilot-instructions.md
.github/workflows/: clang-tidy.yml  pre-commit.yml  release.yml  test.yml
docker/: Dockerfile.gdb
include/: zll.h  zll.hpp
scripts/: ci_results.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  defines_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+22 more)
test/: basic_test.cpp  gdb_bin.cpp  ll_test.cpp  sh_test.cpp
